feat: implement account deletion and transaction management features